Enlarged message box on NASA page.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p><label for="name">Name</label></p>
             <p><input type="text" id="name" name="name"></p>
             <p><label for="message">Message</label></p>
-            <p><input type="text" id="message" name="message"></p>         
+            <p><textarea type="text" id="message" name="message"></textarea></p>         
             <p><input type="submit" class="button" value="Send"></p>
           </form>
       </div>
