--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
       <div>
           <h3>Office Info</h3>
-            <p>Public communications Office</p>
+            <p>Public Communications Office</p>
             <p>NASA Headquarters</p>
             <p>300 E. Street SW, Suite 5R30</p>
             <p>Washington, DC 20546</p>
